# modmail-addons

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint_test.yml  status_embed.yml
Plugins/: index.toml  plugin.toml
Plugins/do-names-even-matter/: planet.py
Plugins/git/: git.py
Plugins/internal_eval/: internal_eval.py
Plugins/planet/: planet.py
Plugins/solar_system/: earth.py  mars.py
