# NOTE: THIS FILE IS ONLY USED FOR DEVELOPMENT
# ALL PLUGINS HAVE THEIR OWN CONFIGURATION, THIS IS FULL REPO SETTINGS
[tool.poetry]
name = "addons"
version = "0.1.0"
description = "Addons to extend the function of discord-modmail/modmail"
authors = ["onerandomusername <genericusername414+git@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
poetry = "~=1.1.8"

[tool.poetry.extras]


[tool.poetry.dev-dependencies]
# always needed
pre-commit = "~=2.1"
taskipy = "^1.6.0"
# linting
black = "^21.7b0"
isort = "^5.9.2"


[tool.black]
line-length = 110
target-version = ['py38']
include = '\.pyi?$'

[tool.taskipy.tasks]
black = { cmd = "black --check .", help = "dry run of black" }
flake8 = { cmd = "task lint flake8", help = "Lints code with flake8" }
lint = { cmd = "pre-commit run --all-files", help = "Checks all files for CI errors" }
precommit = { cmd = "pre-commit install --install-hooks", help = "Installs the precommit hook" }
